force-app/main/default/objects/Financial_Incentive__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>