force-app/main/default/objects/Financial_Incentive__c/fields/Cost_Element__c.field-meta.xml
<CustomField>
    <fullName>Cost_Element__c</fullName>
    <label>Cost Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>