force-app/main/default/objects/Financial_Incentive__c/fields/CoT_Staff_Person_Engaged__c.field-meta.xml
<CustomField>
    <fullName>CoT_Staff_Person_Engaged__c</fullName>
    <label>CoT Staff Person Engaged</label>
    <length>200</length>
    <type>Text</type>
</CustomField>