force-app/main/default/objects/Financial_Incentive__c/fields/Created_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be populated automatically if IMIT request is submitted by Client through form.</description>
    <inlineHelpText>This field will be populated automatically if IMIT request is submitted by Client through form.</inlineHelpText>
    <label>Created by Client</label>
    <type>Checkbox</type>
</CustomField>