force-app/main/default/objects/Financial_Incentive__c/fields/Current_Net_Income_loss_for_the_month__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Income_loss_for_the_month__c</fullName>
    <formula>Total_Monthly_Revenue__c-Total_Monthly_Expense__c</formula>
    <label>Current Net Income loss for the month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>