force-app/main/default/objects/Financial_Incentive__c/fields/CurrentExisting_Retail_Business__c.field-meta.xml
<CustomField>
    <fullName>CurrentExisting_Retail_Business__c</fullName>
    <label>Current/Existing Retail Business</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>