force-app/main/default/objects/Financial_Incentive__c/fields/Customer_Retention_and_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention_and_Experience__c</fullName>
    <label>Customer Retention and Experience</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>