force-app/main/default/objects/Financial_Incentive__c/fields/Date_of_application_for_building_Permit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_application_for_building_Permit__c</fullName>
    <description>When application for main above ground building permit was filed or is anticipated to be filed</description>
    <inlineHelpText>When application for main above ground building permit was filed or is anticipated to be filed</inlineHelpText>
    <label>Date of application for building Permit</label>
    <type>Date</type>
</CustomField>