force-app/main/default/objects/Financial_Incentive__c/fields/Deed_Ownership_Verification__c.field-meta.xml
<CustomField>
    <fullName>Deed_Ownership_Verification__c</fullName>
    <description>Is the applicant the property owner as reflected on Deed?</description>
    <inlineHelpText>Is the applicant the property owner as reflected on Deed?</inlineHelpText>
    <label>Deed Ownership Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>