force-app/main/default/objects/Financial_Incentive__c/fields/Deed_Ownership_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deed_Ownership_Verification_Comments__c</fullName>
    <description>Deed Ownership Verification Comments</description>
    <inlineHelpText>Deed Ownership Verification Comments</inlineHelpText>
    <label>Deed Ownership Verification Comments</label>
    <type>TextArea</type>
</CustomField>