force-app/main/default/objects/Financial_Incentive__c/fields/Demonstrate_25_commitment__c.field-meta.xml
<CustomField>
    <fullName>Demonstrate_25_commitment__c</fullName>
    <label>Demonstrate 25% commitment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>