force-app/main/default/objects/Financial_Incentive__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <description>Depth of subject property</description>
    <inlineHelpText>Depth of subject property</inlineHelpText>
    <label>Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>