force-app/main/default/objects/Financial_Incentive__c/fields/Describe_Brownfield_Remediation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Describe_Brownfield_Remediation_Plan__c</fullName>
    <description>What remedial actions are required and how will these actions be carried out?</description>
    <inlineHelpText>What remedial actions are required and how will these actions be carried out?</inlineHelpText>
    <label>Describe Brownfield Remediation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>