force-app/main/default/objects/Financial_Incentive__c/fields/Describe_Gender__c.field-meta.xml
<CustomField>
    <fullName>Describe_Gender__c</fullName>
    <label>Describe Gender if Not Listed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>