force-app/main/default/objects/Financial_Incentive__c/fields/Describe_Indigenous_to_Canada__c.field-meta.xml
<CustomField>
    <fullName>Describe_Indigenous_to_Canada__c</fullName>
    <label>Indigenous to Canada If Not Listed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>