force-app/main/default/objects/Financial_Incentive__c/fields/Describe_Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Describe_Sexual_Orientation__c</fullName>
    <label>Sexual Orientation If Not Listed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>