force-app/main/default/objects/Financial_Incentive__c/fields/Describe_Use_2__c.field-meta.xml
<CustomField>
    <fullName>Describe_Use_2__c</fullName>
    <description>Describe the use(s) of the property and the type of business to be conducted</description>
    <inlineHelpText>Describe the use(s) of the property and the type of business to be conducted</inlineHelpText>
    <label>Describe Use 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>