force-app/main/default/objects/Financial_Incentive__c/fields/Describe_your_credit_rating__c.field-meta.xml
<CustomField>
    <fullName>Describe_your_credit_rating__c</fullName>
    <label>Describe your credit rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>