force-app/main/default/objects/Financial_Incentive__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Explain the reason for default, circumstances and how default is being processed</description>
    <inlineHelpText>Explain the reason for default, circumstances and how default is being processed</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>