force-app/main/default/objects/Financial_Incentive__c/fields/Description_and_Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Description_and_Scope_of_Work__c</fullName>
    <description>Description and Scope of Work of Proposed Improvements</description>
    <label>Description and Scope of Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>