force-app/main/default/objects/Financial_Incentive__c/fields/Description_of_Const_Alteration_Renov__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Const_Alteration_Renov__c</fullName>
    <description>Description of construction, alteration or renovation</description>
    <inlineHelpText>Description of construction, alteration or renovation</inlineHelpText>
    <label>Description of Const/Alteration/Renov</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>