force-app/main/default/objects/Financial_Incentive__c/fields/Designated_Employment_Area__c.field-meta.xml
<CustomField>
    <fullName>Designated_Employment_Area__c</fullName>
    <description>Is the property in a designated Employment Area as shown on Map 6 of the Official Plan</description>
    <inlineHelpText>Is the property in a designated Employment Area as shown on Map 6 of the Official Plan</inlineHelpText>
    <label>Designated Employment Area Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>