force-app/main/default/objects/Financial_Incentive__c/fields/Designated_Employment_Area_Comments__c.field-meta.xml
<CustomField>
    <fullName>Designated_Employment_Area_Comments__c</fullName>
    <description>Designated Employment Area Comments</description>
    <inlineHelpText>Designated Employment Area Comments</inlineHelpText>
    <label>Designated Employment Area Comments</label>
    <type>TextArea</type>
</CustomField>