force-app/main/default/objects/Financial_Incentive__c/fields/Destination_Year__c.field-meta.xml
<CustomField>
    <fullName>Destination_Year__c</fullName>
    <description>The first full taxation year following the completion and reassessment of the Eligible Development</description>
    <inlineHelpText>The first full taxation year following the completion and reassessment of the Eligible Development</inlineHelpText>
    <label>Destination Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>