force-app/main/default/objects/Financial_Incentive__c/fields/Detail_of_Programming__c.field-meta.xml
<CustomField>
    <fullName>Detail_of_Programming__c</fullName>
    <label>Detail of Programming</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>