force-app/main/default/objects/Financial_Incentive__c/fields/Details_of_Removed_Demolished_Property__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Removed_Demolished_Property__c</fullName>
    <description>Describe existing buildings or property being removed or demolished in connection with new construction</description>
    <inlineHelpText>Describe existing buildings or property being removed or demolished in connection with new construction</inlineHelpText>
    <label>Details of Removed/Demolished Property</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>