force-app/main/default/objects/Financial_Incentive__c/fields/Diversity__c.field-meta.xml
<CustomField>
    <fullName>Diversity__c</fullName>
    <description>Please indicate how you are handling diversity as part of your event.</description>
    <inlineHelpText>Please indicate how you are handling diversity as part of your event.</inlineHelpText>
    <label>Diversity</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>