force-app/main/default/objects/Financial_Incentive__c/fields/Do_you_have_a_location_in_Toronto__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_location_in_Toronto__c</fullName>
    <label>Do you have a location in Toronto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>