force-app/main/default/objects/Financial_Incentive__c/fields/Do_you_need_extension__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_extension__c</fullName>
    <description>User should specify the value if work has not been completed.</description>
    <inlineHelpText>User should specify the value if work has not been completed.</inlineHelpText>
    <label>Do you need extension?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Has_work_been_completed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>