force-app/main/default/objects/Financial_Incentive__c/fields/Don_t_send_confirmation_email__c.field-meta.xml
<CustomField>
    <fullName>Don_t_send_confirmation_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t send confirmation email</label>
    <type>Checkbox</type>
</CustomField>