force-app/main/default/objects/Financial_Incentive__c/fields/E_Signature_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_Record_Link__c</fullName>
    <description>This URL points to signed response submitted by client.</description>
    <inlineHelpText>This URL points to signed response submitted by client.</inlineHelpText>
    <label>E-Signature Record Link</label>
    <type>Url</type>
</CustomField>