force-app/main/default/objects/Financial_Incentive__c/fields/EDC_Invoice__c.field-meta.xml
<CustomField>
    <fullName>EDC_Invoice__c</fullName>
    <label>EDC Invoice #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>