force-app/main/default/objects/Financial_Incentive__c/fields/EDC_Invoice_for_1st_payment__c.field-meta.xml
<CustomField>
    <fullName>EDC_Invoice_for_1st_payment__c</fullName>
    <label>EDC Invoice # for 1st payment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>