force-app/main/default/objects/Financial_Incentive__c/fields/EDC_Theme_Addressed__c.field-meta.xml
<CustomField>
    <fullName>EDC_Theme_Addressed__c</fullName>
    <label>EDC Theme Addressed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusion and Equity</fullName>
            </value>
            <value>
                <fullName>Space and Access</fullName>
            </value>
            <value>
                <fullName>Talent and Innovation</fullName>
            </value>
            <value>
                <fullName>Excellence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>