force-app/main/default/objects/Financial_Incentive__c/fields/Educational_Background__c.field-meta.xml
<CustomField>
    <fullName>Educational_Background__c</fullName>
    <label>Educational Background</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>College Diploma</fullName>
            </value>
            <value>
                <fullName>University Degree</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Less than high school</fullName>
            </value>
            <value>
                <fullName>Degree or diploma from a college or university</fullName>
            </value>
            <value>
                <fullName>Graduate or professional degree</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>