force-app/main/default/objects/Financial_Incentive__c/fields/Eligible_Use_Verification__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Use_Verification__c</fullName>
    <description>Is the development in an eligible use or sector?</description>
    <inlineHelpText>Is the development in an eligible use or sector?</inlineHelpText>
    <label>Eligible Use Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>