force-app/main/default/objects/Financial_Incentive__c/fields/Eligible_Use_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Use_Verification_Comments__c</fullName>
    <description>Eligible Use Verification Comments</description>
    <inlineHelpText>Eligible Use Verification Comments</inlineHelpText>
    <label>Eligible Use Verification Comments</label>
    <type>TextArea</type>
</CustomField>