force-app/main/default/objects/Financial_Incentive__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of Registered Property Owner or their authorized agent that has the legal authority to bind the Owner</description>
    <inlineHelpText>Email of Registered Property Owner or their authorized agent that has the legal authority to bind the Owner</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>