force-app/main/default/objects/Financial_Incentive__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This is the end date for Event/Project/Membership applicable to sector Grant</description>
    <inlineHelpText>This is the end date for Event/Project/Membership applicable to sector Grant</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>