force-app/main/default/objects/Financial_Incentive__c/fields/End_Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Event__c</fullName>
    <description>Please provide the End date and time of your event:</description>
    <inlineHelpText>Please provide the End date and time of your event:</inlineHelpText>
    <label>End Date of Event</label>
    <type>Date</type>
</CustomField>