force-app/main/default/objects/Financial_Incentive__c/fields/Estimated_Construction_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Construction_Completion_Date__c</fullName>
    <description>Estimated completion date of construction</description>
    <inlineHelpText>Estimated completion date of construction</inlineHelpText>
    <label>Estimated Construction Completion Date</label>
    <type>Date</type>
</CustomField>