force-app/main/default/objects/Financial_Incentive__c/fields/Estimated_Construction_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Construction_Cost__c</fullName>
    <description>Total cost of construction including &#39;hard&#39; construction costs and &#39;soft&#39; costs including financing, consultants, etc</description>
    <inlineHelpText>Total cost of construction including &#39;hard&#39; construction costs and &#39;soft&#39; costs including financing, consultants, etc</inlineHelpText>
    <label>Estimated Construction Cost $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>