force-app/main/default/objects/Financial_Incentive__c/fields/Estimated_Construction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Construction_Start_Date__c</fullName>
    <description>Date construction of IMIT-eligible project begins</description>
    <inlineHelpText>Date construction of IMIT-eligible project begins</inlineHelpText>
    <label>Estimated Construction Start Date</label>
    <type>Date</type>
</CustomField>