force-app/main/default/objects/Financial_Incentive__c/fields/Estimated_cost_of_remediation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_cost_of_remediation__c</fullName>
    <description>List and summarize the remediation costs. Attach a statement of the costs to be incurred. Paid invoices must be from a Qualified Person as defined in Ontario Regulation 153/04 of the Environmental Protection Act or an entity that is satisfactory to the City. The costs claimed may be subject to an independent audit at the City&#39;s request, to be conducted at the sole expense of the property owner.</description>
    <inlineHelpText>Estimated cost of remediation $ that Include a statement of costs to be incurred in connection with the remediation. The statement must summarize all remediation costs</inlineHelpText>
    <label>Estimated cost of remediation $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>