force-app/main/default/objects/Financial_Incentive__c/fields/Estimated_of_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Jobs__c</fullName>
    <label>Estimated # of Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>