force-app/main/default/objects/Financial_Incentive__c/fields/Estimated_Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Completion_Date__c</fullName>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>