force-app/main/default/objects/Financial_Incentive__c/fields/Event_Business_Outcome_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Business_Outcome_Survey_Status__c</fullName>
    <description>This field auto populate when the Email and further Reminder will be sent to Client</description>
    <inlineHelpText>This field auto populate when the Email and further Reminder will be sent to Client</inlineHelpText>
    <label>Event Business Outcome Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue - 1 Day</fullName>
            </value>
            <value>
                <fullName>In Queue - 1 Week</fullName>
            </value>
            <value>
                <fullName>In Queue - 2 Week</fullName>
            </value>
            <value>
                <fullName>In Queue - 3 Week</fullName>
            </value>
            <value>
                <fullName>Sent - 3 Week</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>