force-app/main/default/objects/Financial_Incentive__c/fields/Event_City__c.field-meta.xml
<CustomField>
    <fullName>Event_City__c</fullName>
    <description>Please provide the City of your event:</description>
    <inlineHelpText>Please provide the City of your event:</inlineHelpText>
    <label>Event City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airdrie</fullName>
            </value>
            <value>
                <fullName>Brooks</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Camrose</fullName>
            </value>
            <value>
                <fullName>Chestermere</fullName>
            </value>
            <value>
                <fullName>Cold Lake</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>Fort Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Grande Prairie</fullName>
            </value>
            <value>
                <fullName>Lacombe</fullName>
            </value>
            <value>
                <fullName>Leduc</fullName>
            </value>
            <value>
                <fullName>Lethbridge</fullName>
            </value>
            <value>
                <fullName>Lloydminster (part)</fullName>
            </value>
            <value>
                <fullName>Medicine Hat</fullName>
            </value>
            <value>
                <fullName>Red Deer</fullName>
            </value>
            <value>
                <fullName>Spruce Grove</fullName>
            </value>
            <value>
                <fullName>St. Albert</fullName>
            </value>
            <value>
                <fullName>Wetaskiwin</fullName>
            </value>
            <value>
                <fullName>Abbotsford</fullName>
            </value>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Burnaby</fullName>
            </value>
            <value>
                <fullName>Campbell River</fullName>
            </value>
            <value>
                <fullName>Castlegar</fullName>
            </value>
            <value>
                <fullName>Chilliwack</fullName>
            </value>
            <value>
                <fullName>Colwood</fullName>
            </value>
            <value>
                <fullName>Coquitlam</fullName>
            </value>
            <value>
                <fullName>Courtenay</fullName>
            </value>
            <value>
                <fullName>Cranbrook</fullName>
            </value>
            <value>
                <fullName>Dawson Creek</fullName>
            </value>
            <value>
                <fullName>Duncan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>